--- a/Syndication.Core/Syndication.Core.csproj
+++ b/Syndication.Core/Syndication.Core.csproj
@@ -4,6 +4,26 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Syndication.Core</Title>
+    <Authors>Walter M. Soto</Authors>
+    <Description>A modern, lightweight, and robust C# library for reading syndication feeds (RSS, Atom, JSON, ActivityPub).</Description>
+    <PackageProjectUrl>https://github.com/waltersoto/Syndication.Core</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/waltersoto/Syndication.Core</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
